@@ -126,4 +126,5 @@ name: setup
 description: "Make choices for your application."
 author: RailsApps
 
+run_after: [git, railsapps]
 category: configuration
