@@ -2,8 +2,10 @@ h1. CHANGELOG
 
 h2. 2.1.1 unreleased
 
+* add 'railsapps' recipe for example apps
 * add 'git' recipe (should precede any other recipe)
 * fixes to 'setup' and 'frontend' recipes (contributed by tomykaira)
+* fix syntax for alternative bundle path
 
 h2. 2.1.0 August 10, 2012
 
